# email_assistant

./: .env  .gitignore  Architecture.md  README.md  Technical Explanation.md  config.config  llm_session.py  pyproject.toml  pytest.ini  test_session_history.py  test_yes_no_scenarios.py
email_assistant/assistant/: cli.py
email_assistant/llm_interface/: disk.py  llm_session.py
src/assistant/: conversation_state.py  conversational_agent.py  intent_classifier.py  llm_session.py  prompts_params.py  response_generator.py  utils.py
src/cli/: cli.py
tests/: conftest.py  test_advanced_integration.py  test_assistant.py  test_cli.py  test_cloud_saving.py  test_conversation_state.py  test_conversational_agent.py  test_conversational_agent_comprehensive.py  test_cross_component_integration.py  test_edge_cases_integration.py  test_email_extraction.py  test_environment_integration.py  test_integration.py  test_intent_classifier.py  test_response_generator.py  test_user_experience_integration.py  test_utils.py  test_yes_no_responses.py
