[project]
name = "email-assistant"
version = "0.1.0"
description = "Interactive email summarizing and drafting assistant"
authors = [
    {name = "Raymond Allen",email = "raymondkyrleallen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "boto3 (>=1.40.11,<2.0.0)",
    "datetime (>=5.5,<6.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
    "coverage[toml] (>=7.0.0,<8.0.0)",
    "freezegun (>=1.2.0,<2.0.0)",
    "responses (>=0.24.0,<1.0.0)",
]
dev = [
    "email-assistant[test]",
    "black (>=23.0.0,<24.0.0)",
    "isort (>=5.12.0,<6.0.0)",
    "flake8 (>=6.0.0,<7.0.0)",
    "mypy (>=1.5.0,<2.0.0)",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
eassistant = "cli.cli:cli"
